examples/test/testpolicy17707.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17707
  namespace: namespace252
spec:
  podSelector:
    matchLabels:
      key13: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value8
          key16: value36
      podSelector:
        matchLabels:
          key35: value20
          key1: value19
